--- a/form-website/frontend/.env.production
+++ b/form-website/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://46e949dbqe.execute-api.eu-central-1.amazonaws.com/prod
+VITE_API_BASE_URL=https://h9zjvpmoa5.execute-api.eu-central-1.amazonaws.com/prod
