add presigned URL endpoint and S3 direct upload support

--- a/form-website/booking-system-lambda/package.json
+++ b/form-website/booking-system-lambda/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.540.0",
-    "@aws-sdk/client-ses": "^3.844.0",
+    "@aws-sdk/client-s3": "^3.846.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
-    "googleapis": "^128.0.0"
+    "googleapis": "^128.0.0",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "serverless": "^3.38.0",
