--- a/form-website/booking-system-lambda/serverless.yml
+++ b/form-website/booking-system-lambda/serverless.yml
@@ -10,6 +10,7 @@ provider:
   
   environment:
     DYNAMODB_TABLE: ${self:service}-${self:provider.stage}
+    CV_BUCKET_NAME: riformaeprogresso-cvs
     NODE_ENV: ${self:provider.stage}
     ADMIN_USERNAME: ${env:ADMIN_USERNAME, 'admin'}
     ADMIN_PASSWORD: ${env:ADMIN_PASSWORD, 'rep2025@'}
@@ -21,6 +22,7 @@ provider:
   iam:
     role:
       statements:
+        # DynamoDB permissions
         - Effect: Allow
           Action:
             - dynamodb:Query
@@ -34,11 +36,31 @@ provider:
           Resource:
             - "arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
             - "arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}/index/*"
+        
+        # SES permissions for email notifications
         - Effect: Allow
           Action:
             - ses:SendEmail
             - ses:SendRawEmail
           Resource: "*"
+        
+        # S3 permissions for CV storage
+        - Effect: Allow
+          Action:
+            - s3:PutObject
+            - s3:GetObject
+            - s3:DeleteObject
+            - s3:HeadObject
+          Resource:
+            - "arn:aws:s3:::riformaeprogresso-cvs/*"
+        
+        # S3 bucket permissions
+        - Effect: Allow
+          Action:
+            - s3:ListBucket
+          Resource:
+            - "arn:aws:s3:::riformaeprogresso-cvs"
+
 functions:
   api:
     handler: lambda-handler.handler
@@ -66,6 +88,7 @@ functions:
 
 resources:
   Resources:
+    # DynamoDB table for booking system data
     BookingSystemTable:
       Type: AWS::DynamoDB::Table
       Properties:
@@ -102,7 +125,7 @@ resources:
                 KeyType: HASH
             Projection:
               ProjectionType: ALL
-        # Data backup ( optional )
+        # Data backup (optional)
         PointInTimeRecoverySpecification:
           PointInTimeRecoveryEnabled: true
 
