Add missing imports, extend allowed file types, and add clarifying comments to placeholder values

--- a/form-website/booking-system-lambda/serverless.yml
+++ b/form-website/booking-system-lambda/serverless.yml
@@ -13,7 +13,7 @@ provider:
     CV_BUCKET_NAME: riformaeprogresso-cvs
     NODE_ENV: ${self:provider.stage}
     ADMIN_USERNAME: ${env:ADMIN_USERNAME, 'admin'}
-    ADMIN_PASSWORD: ${env:ADMIN_PASSWORD, 'rep2025@'}
+    ADMIN_PASSWORD: ${env:ADMIN_PASSWORD, 'replace_with_your_own'}
     CORS_ORIGINS: ${env:CORS_ORIGINS, '*'}
     GOOGLE_CLIENT_ID: ${env:GOOGLE_CLIENT_ID, ''}
     GOOGLE_CLIENT_SECRET: ${env:GOOGLE_CLIENT_SECRET, ''}
