--- a/form-website/booking-system-lambda/package.json
+++ b/form-website/booking-system-lambda/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/client-s3": "^3.846.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
+    "@aws-sdk/s3-request-presigner": "^3.848.0",
     "googleapis": "^128.0.0",
     "nodemailer": "^6.10.1"
   },
